Story 2368. Added new Gemini resolvers and updated CaomArtifactResolver.properties.